[gd_scene load_steps=5 format=3 uid="uid://uj48cb4hippt"]

[ext_resource type="Texture2D" uid="uid://cyn88x3wm0heh" path="res://Assets/BG/BG_TitleScreen.png" id="1_klylv"]
[ext_resource type="Script" uid="uid://bxisdj1nqc0xv" path="res://Scripts/title_screen.gd" id="1_p3fck"]
[ext_resource type="PackedScene" uid="uid://cxeldxtudj6tm" path="res://Scenes/game_scene.tscn" id="2_4gxqj"]
[ext_resource type="PackedScene" uid="uid://6cq6emrhrhj5" path="res://Scenes/option_panel.tscn" id="4_twnyg"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p3fck")
start_scene = ExtResource("2_4gxqj")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
offset_left = -826.13
offset_top = -422.72
offset_right = 639.87
offset_bottom = 443.28
texture = ExtResource("1_klylv")
expand_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -459.0
offset_top = -35.0
offset_right = 459.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(2.7092478, 0.29910272, 2.4666095, 1)
theme_override_colors/font_outline_color = Color(0, 0.45882353, 0.17254902, 1)
theme_override_font_sizes/font_size = 70
text = "Danmaku Minus 5 SEX DEAD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "게임 시작"

[node name="OptionButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "옵션"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "게임 종료"

[node name="OptionPanel" parent="." instance=ExtResource("4_twnyg")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
